Added workflow to add websites in options page

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.mb-basic {
+.mb-medium {
   margin-bottom: 20px;
+}
+
+.mb-small {
+  margin-bottom: 10px;
 }
