--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap"); // Roboto
 
+$medium-spacer: 20px;
+$small-spacer: 10px;
+
 body {
   text-align: center;
   width: 300px;
@@ -7,10 +10,18 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.mt-0 {
+  margin-top: 0;
+}
+
 .mb-medium {
-  margin-bottom: 20px;
+  margin-bottom: $medium-spacer;
 }
 
 .mb-small {
-  margin-bottom: 10px;
+  margin-bottom: $small-spacer;
+}
+
+.text-gray {
+  color: #606266;
 }
