--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,7 +6,6 @@ $small-spacer: 10px;
 body {
   text-align: center;
   width: 300px;
-  height: 500px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -20,6 +19,10 @@ body {
 
 .mb-small {
   margin-bottom: $small-spacer;
+}
+
+.p-0 {
+  padding: 0;
 }
 
 .text-gray {
